Dec 2: Exploded the frog
Dec 3: Note wirh code now apear beneath frog when it exploded
Dec 4-6: Learning git and github
Dec 7: Trying to add collectable that goes into inventory when clicked on
Dec 8: Can loot the key from the chest.
Dec 10: Can pick up tape from the box / not adding to inventory yet
Dec 15: Collectables are fully working, door can be open with key now. 
TODO: If not require to rewrite half of the code make maps be able to save progress, Make animation for waterdrop in a basement, make little minigame for fixing the pipe, move on to the sound probably <:
Dec 16: Fixed puzzle with frog (frog exploded when not all lamps on)
Dec 17: Started wotk on fix pipe minigame
Dec 22: Tape appear when LMB clicked and it changes shape depending on mouse pos. It was miracle that I was able to do this.
Dec 23: Finished fixpipe minigame on test.py need to polish it up and implicate in main code.
Dec 24 (11:59 pm): Polishing fixpipe. Have the idea how to make it a little more realistic, implementing idea now.
Dec 28: still trying
Jan 1: Was slacking off all winter break trying to come back. Finished fixpipe minigame, need to implicate in main code.
Jan 2-3: trying to implicate fixpipe minigame in Game. tough.
Jan 6: trying.
Jan 7: Need to add event list and all bugs are fixed | Pipefix minigame technically works.
Jan 7(Home): Pipefix working. need to fix minor bugs, add effect in basement, finish story and add sounds.
Jan 8: Added simple ending when we go to bath, technically everything works just need to add details. Gonna close fixpipe branch.
Jan 9: Added branch finishing up
Jan 12: added hint sheet for lamp puzzle, drawed animation for pipe leaking.
Jan 13: added a new player model concept, implemented pipe leaking animation, minor bug fixes along the way.
Jan 14: Added hint to final level, added UI to Pipefix minigame.
Jan 14(Home): Drawed Player model and animation.