@@ -85,3 +85,4 @@ Jan 12: added hint sheet for lamp puzzle, drawed animation for pipe leaking.
 Jan 13: added a new player model concept, implemented pipe leaking animation, minor bug fixes along the way.
 Jan 14: Added hint to final level, added UI to Pipefix minigame.
 Jan 14(Home): Drawed Player model and animation.
+Jan 16: started work on player animation.
